feat(contact): ajout de la page merci et modif du formulaire

--- a/ma beautey/formulaire.html
+++ b/ma beautey/formulaire.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr-be">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,30 +11,29 @@
 
     <script type="text/javascript">
         document.onmousemove = suitsouris;
-        function suitsouris(evenement)
-        {
-                if(navigator.appName=="Microsoft Internet Explorer")
-                {
-                        var x = event.x+document.body.scrollLeft;
-                        var y = event.y+document.body.scrollTop;
-                }
-                else
-                {
-                        var x =  evenement.pageX;
-                        var y =  evenement.pageY;
-                }
-                document.getElementById("curseur").style.left = (x+1)+'px';
-                document.getElementById("curseur").style.top  = (y+1)+'px';
+        function suitsouris(evenement) {
+            if (navigator.appName == "Microsoft Internet Explorer") {
+                var x = event.x + document.body.scrollLeft;
+                var y = event.y + document.body.scrollTop;
+            }
+            else {
+                var x = evenement.pageX;
+                var y = evenement.pageY;
+            }
+            document.getElementById("curseur").style.left = (x + 1) + 'px';
+            document.getElementById("curseur").style.top = (y + 1) + 'px';
         }
 
-</script>
+    </script>
 </head>
+
 <body>
-<img id="curseur"src="curseur.png" alt="Image qui suit la souris"  style="position:absolute;display:block;z-index:5;" />
+    <img id="curseur" src="curseur.png" alt="Image qui suit la souris"
+        style="position:absolute;display:block;z-index:5;" />
     <div>
         <ul class="navbar">
             <li> <a href="index.html">Accueil</a>
-            <li> <a href="famille2.html">Bey-family</a>    
+            <li> <a href="famille2.html">Bey-family</a>
             <li> <a href="activité.html">Activités</a></li>
             <li> <a href="Quizz.html">Quizz</a></li>
             <li> <a href="galerie.html">Galerie </a></li>
@@ -83,66 +83,74 @@
         <span></span>
         <span></span>
         <span></span>
-     </div>
-        <h1>Contacter la Beautey</h1>
-        <br>  
-        
-        <form method="get" action="merci.php">
-            <!-- dans cette balise que l'on place le contenu d'un formulaire -->
-             <!-- un inout est une balise permettant à l'utilisateur de renseigner une info 
-              il y a une grande variété que l'on peut définir à l'input, limitant les possibilités de réponse de l'utilisateur -->
-            <div>
-                <br>
-                <label for="ForNomDeFamille">Votre nom de famille: </label>  
-                <input type="text" name="NomDeFamille" id="ForNomDeFamille" placeholder="Exemple:Vancau" title="Votre nom de famille">
-            </div>
+    </div>
+    <h1>Contacter la Beautey</h1>
+    <br>
+
+    <form method="POST" action="https://formspree.io/f/xpwylkvp">
+        <!-- dans cette balise que l'on place le contenu d'un formulaire -->
+        <!-- un inout est une balise permettant à l'utilisateur de renseigner une info 
+        il y a une grande variété que l'on peut définir à l'input, limitant les possibilités de réponse de l'utilisateur -->
+        <div>
             <br>
-            <div>
-                <label for="VotrePrénom">Votre Prénom:</label>
-                <input type="text" name="Prénom" id="VotrePrénom" placeholder="Exemple: Stephanie" title="Votre Prénom" required>
-            </div>
+            <label for="ForNomDeFamille">Votre nom de famille: </label>
+            <input type="text" name="NomDeFamille" id="ForNomDeFamille" placeholder="Exemple:Vancau"
+                title="Votre nom de famille">
+        </div>
+        <br>
+        <div>
+            <label for="VotrePrénom">Votre Prénom:</label>
+            <input type="text" name="Prénom" id="VotrePrénom" placeholder="Exemple: Stephanie" title="Votre Prénom"
+                required>
+        </div>
+        <br>
+        <div>
+            <input type="radio" name="web" value="Femme"> <label for="Femme">Femme</label>
+            <input type="radio" name="web" value="Homme"> <label for="Homme">Homme</label>
+            <input type="radio" name="web" value="Autre"> <label for="Autre">Autre</label>
+        </div>
+        <br>
+        <div>
+            <label for="Email">Adresse mail:</label>
+            <input type="email" id="Email" placeholder="Exemple: hju@" title="Votre Email" required>
+            <br><!-- required obligatoire -->
+        </div>
+        <br>
+        <div>
+            <label for="DateNaissance">Date de Naissance</label>
+            <input type="date" name="DateNaissance" id="DateNaissance">
+        </div>
+        <br>
+        <div>
+            <label for="VotreMessage">Votre Message:</label>
             <br>
-            <div>
-                <input type="radio" name="web" value="Femme"> <label for="Femme">Femme</label>
-                <input type="radio" name="web" value="Homme"> <label for="Homme">Homme</label>
-                <input type="radio" name="web" value="Autre"> <label for="Autre">Autre</label>
-            </div>
             <br>
-            <div>
-                <label for="Email">Adresse mail:</label>
-                <input type="email" id="Email" placeholder="Exemple: hju@" title="Votre Email" required> 
-                <br><!-- required obligatoire -->
-            </div>
-            <br>
-            <div>
-                <label for="DateNaissance">Date de Naissance</label>
-                <input type="date" name="DateNaissance" id="DateNaissance">
-            </div>
-            <br>
-            <div> 
-                <label for="VotreMessage">Votre Message:</label>
-                <br>
-                <br>
-                <textarea id="VotreMessage" name="VotreMessage" rows="3" cols="42"></textarea>
-            </div>
-            <br>
-            <div>
+            <textarea id="VotreMessage" name="VotreMessage" rows="3" cols="42"></textarea>
+        </div>
+        <br>
+        <!-- Champs cachés pour Formspree -->
+        <input type="hidden" name="_subject" value="Nouveau message - La Beautey">
+        <input type="hidden" name="_redirect" value="https://stephvcb.github.io/la-beautey/merci.html">
+        <input type="text" name="_gotcha" style="display:none">
+
+        <div>
             <label for="TuMAime">Tu as aimé la Beautey?</label>
-            <input type="checkbox" name="TuMAime" id="TuMAime" required >
+            <input type="checkbox" name="TuMAime" id="TuMAime" required>
             <br>
-            </div>
-            <br>
-            <div>
-                <button type="submit" class="button">Envoyer</button>
-            </div>
-            <br>
-        </form>
+        </div>
         <br>
+        <div>
+            <button type="submit" class="button">Envoyer</button>
+        </div>
         <br>
-        <br>
-            <img src="beybey1.jpg" alt="" class="center">
+    </form>
+    <br>
+    <br>
+    <br>
+    <img src="beybey1.jpg" alt="" class="center">
 
     </div>
     <p> <a href="formulaire.html">⬆️⬆️</a></p>
 </body>
+
 </html>
