--- a/ma beautey/formulaire.html
+++ b/ma beautey/formulaire.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-be">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -8,149 +8,131 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="photo-profil.css">
     <link rel="stylesheet" href="boules.css">
-
     <script type="text/javascript">
         document.onmousemove = suitsouris;
         function suitsouris(evenement) {
             if (navigator.appName == "Microsoft Internet Explorer") {
                 var x = event.x + document.body.scrollLeft;
                 var y = event.y + document.body.scrollTop;
-            }
-            else {
+            } else {
                 var x = evenement.pageX;
                 var y = evenement.pageY;
             }
             document.getElementById("curseur").style.left = (x + 1) + 'px';
             document.getElementById("curseur").style.top = (y + 1) + 'px';
         }
-
     </script>
 </head>
 
 <body>
     <img id="curseur" src="curseur.png" alt="Image qui suit la souris"
         style="position:absolute;display:block;z-index:5;" />
+
     <div>
         <ul class="navbar">
-            <li> <a href="index.html">Accueil</a>
-            <li> <a href="famille2.html">Bey-family</a>
-            <li> <a href="activité.html">Activités</a></li>
-            <li> <a href="Quizz.html">Quizz</a></li>
-            <li> <a href="galerie.html">Galerie </a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="famille2.html">Bey-family</a></li>
+            <li><a href="activité.html">Activités</a></li>
+            <li><a href="Quizz.html">Quizz</a></li>
+            <li><a href="galerie.html">Galerie</a></li>
             <li><a href="medias.html">Médias</a></li>
-            <li> <a href="formulaire.html">Contact</a></li>
-
+            <li><a href="formulaire.html">Contact</a></li>
         </ul>
     </div>
+
+    <!-- bulles roses -->
     <div class="background">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span>
     </div>
+
     <h1>Contacter la Beautey</h1>
     <br>
 
+    <!-- ✅ Formspree -->
     <form method="POST" action="https://formspree.io/f/xpwylkvp">
-        <!-- dans cette balise que l'on place le contenu d'un formulaire -->
-        <!-- un inout est une balise permettant à l'utilisateur de renseigner une info 
-        il y a une grande variété que l'on peut définir à l'input, limitant les possibilités de réponse de l'utilisateur -->
+        <!-- Nom -->
         <div>
             <br>
-            <label for="ForNomDeFamille">Votre nom de famille: </label>
-            <input type="text" name="NomDeFamille" id="ForNomDeFamille" placeholder="Exemple:Vancau"
-                title="Votre nom de famille">
+            <label for="NomDeFamille">Votre nom de famille:</label>
+            <input type="text" name="NomDeFamille" id="NomDeFamille" placeholder="Exemple: Vancau"
+                title="Votre nom de famille" required>
         </div>
+
+        <!-- Prénom -->
         <br>
         <div>
-            <label for="VotrePrénom">Votre Prénom:</label>
-            <input type="text" name="Prénom" id="VotrePrénom" placeholder="Exemple: Stephanie" title="Votre Prénom"
-                required>
+            <label for="Prenom">Votre Prénom:</label>
+            <input type="text" name="Prenom" id="Prenom" placeholder="Exemple: Stephanie" title="Votre Prénom" required>
         </div>
+
+        <!-- Sexe -->
         <br>
-        <div>
-            <input type="radio" name="web" value="Femme"> <label for="Femme">Femme</label>
-            <input type="radio" name="web" value="Homme"> <label for="Homme">Homme</label>
-            <input type="radio" name="web" value="Autre"> <label for="Autre">Autre</label>
-        </div>
+        <fieldset>
+            <legend>Sexe</legend>
+            <input type="radio" name="Sexe" id="SexeF" value="Femme" required>
+            <label for="SexeF">Femme</label>
+            <input type="radio" name="Sexe" id="SexeH" value="Homme">
+            <label for="SexeH">Homme</label>
+            <input type="radio" name="Sexe" id="SexeA" value="Autre">
+            <label for="SexeA">Autre</label>
+        </fieldset>
+
+        <!-- Email -->
         <br>
         <div>
             <label for="Email">Adresse mail:</label>
-            <input type="email" id="Email" placeholder="Exemple: hju@" title="Votre Email" required>
-            <br><!-- required obligatoire -->
+            <input type="email" name="Email" id="Email" placeholder="exemple@domaine.com" title="Votre Email" required>
         </div>
+
+        <!-- Date de naissance -->
         <br>
         <div>
             <label for="DateNaissance">Date de Naissance</label>
             <input type="date" name="DateNaissance" id="DateNaissance">
         </div>
+
+        <!-- Message -->
         <br>
         <div>
             <label for="VotreMessage">Votre Message:</label>
-            <br>
-            <br>
-            <textarea id="VotreMessage" name="VotreMessage" rows="3" cols="42"></textarea>
+            <br><br>
+            <textarea id="VotreMessage" name="VotreMessage" rows="3" cols="42" required></textarea>
         </div>
+
+        <!-- Champs cachés Formspree -->
         <br>
-        <!-- Champs cachés pour Formspree -->
         <input type="hidden" name="_subject" value="Nouveau message - La Beautey">
         <input type="hidden" name="_redirect" value="https://stephvcb.github.io/la-beautey/merci.html">
         <input type="text" name="_gotcha" style="display:none">
 
+        <!-- Aime -->
+        <br>
         <div>
-            <label for="TuMAime">Tu as aimé la Beautey?</label>
-            <input type="checkbox" name="TuMAime" id="TuMAime" required>
+            <label for="TuMAime">Tu as aimé la Beautey ?</label>
+            <input type="checkbox" name="TuMAime" id="TuMAime">
             <br>
         </div>
+
+        <!-- Bouton -->
         <br>
         <div>
             <button type="submit" class="button">Envoyer</button>
         </div>
         <br>
     </form>
-    <br>
-    <br>
-    <br>
-    <img src="beybey1.jpg" alt="" class="center">
 
-    </div>
-    <p> <a href="formulaire.html">⬆️⬆️</a></p>
+    <br><br><br>
+
+    <img src="beybey1.jpg" alt="La Beautey" class="center">
+
+    <p><a href="formulaire.html">⬆️⬆️</a></p>
 </body>
 
 </html>
